Adicionado a leitura de arquivos e o cadastro de novas turmas

--- a/Projeto3.0/Projeto3.0/Projeto3.0.csproj
+++ b/Projeto3.0/Projeto3.0/Projeto3.0.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoAcademia.cs" />
+    <Compile Include="CadastroTurmas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroTurmas.Designer.cs">
+      <DependentUpon>CadastroTurmas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -55,6 +61,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CadastroTurmas.resx">
+      <DependentUpon>CadastroTurmas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
