--- a/Projeto3.0/Projeto3.0/Projeto3.0.csproj
+++ b/Projeto3.0/Projeto3.0/Projeto3.0.csproj
@@ -47,6 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoAcademia.cs" />
+    <Compile Include="CadastroProfessores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CadastroProfessores.Designer.cs">
+      <DependentUpon>CadastroProfessores.cs</DependentUpon>
+    </Compile>
     <Compile Include="CadastroTurmas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -61,6 +67,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TelaLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaLogin.Designer.cs">
+      <DependentUpon>TelaLogin.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="CadastroProfessores.resx">
+      <DependentUpon>CadastroProfessores.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CadastroTurmas.resx">
       <DependentUpon>CadastroTurmas.cs</DependentUpon>
     </EmbeddedResource>
@@ -76,6 +91,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="TelaLogin.resx">
+      <DependentUpon>TelaLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
