--- a/Projeto3.0/Projeto3.0/Projeto3.0.csproj
+++ b/Projeto3.0/Projeto3.0/Projeto3.0.csproj
@@ -59,11 +59,17 @@
     <Compile Include="CadastroTurmas.Designer.cs">
       <DependentUpon>CadastroTurmas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="MenuProfessores.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MenuProfessores.Designer.cs">
+      <DependentUpon>MenuProfessores.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuTurmas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuTurmas.Designer.cs">
+      <DependentUpon>MenuTurmas.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -79,8 +85,11 @@
     <EmbeddedResource Include="CadastroTurmas.resx">
       <DependentUpon>CadastroTurmas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MenuProfessores.resx">
+      <DependentUpon>MenuProfessores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuTurmas.resx">
+      <DependentUpon>MenuTurmas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
